# intron_horizon_ai_toolchain

./: .gitattributes  CMakeLists.txt  ImageClassifier.onnx  Makefile  PyTorchTraining.py  horizon.cpp  myFirstModel.pth  release_note.txt  run.sh  run_docker.sh  test.yaml
ddk/package/host/source_code/image_utils/: .arclint  .gitignore  CMakeLists.txt  Doxyfile  host_package_build_aarch64.sh  symbol.lst
ddk/package/host/source_code/image_utils/example/: CMakeLists.txt
ddk/package/host/source_code/image_utils/src/: image_utils.cpp
ddk/package/host/source_code/image_utils/test/: CMakeLists.txt  test_convert_from_bgr.cpp  test_crop_with_pad.cpp  test_cropper.cpp  test_decoder.cpp  test_image_tools.cpp  test_padding.cpp  test_resizer.cpp  test_rotater.cpp
ddk/package/host/source_code/model_inference/: .gitignore  CMakeLists.txt  conf.py  generate_doc_sphinx.sh  index.rst  make.sh  run_coverage.sh
ddk/package/host/source_code/model_inference/src/: inference_engine.cc  inference_engine_bpu.cc  inference_engine_dnn.cc  inferencer.cc  postprocess.cc  preprocess.cc
ddk/package/host/source_code/rtsp_server/: CMakeLists.txt  conf.py  generate_doc_sphinx.sh  make.sh  run_coverage.sh
ddk/package/host/source_code/rtsp_server/configs/: rtsp_server.json
ddk/package/host/source_code/rtsp_server/example/: main.cc
ddk/package/host/source_code/rtsp_server/include/: horizon_rtsp_component.h  rtsp_server_config.h
ddk/package/host/source_code/rtsp_server/src/: horizon_rtsp_component.cc  rtsp_server_config.cc
ddk/package/host/source_code/rtsp_server/test/: gtest_main.cc  rtsp_server_gtest.cc  rtsp_server_gtest.h
ddk/package/host/source_code/xproto/: CMakeLists.txt  Doxyfile  build_android3399.sh  build_centos.sh  build_ubuntu.sh  cicd_build_aarch64.sh  cicd_build_centos.sh  cicd_run.sh  export_lib.lst  host_package_build_aarch64.sh
ddk/package/host/source_code/xproto/scm/: arclint  cicd_common_tool.yaml
ddk/package/host/source_code/xproto/test/: CMakeLists.txt  gtest_helper.h  gtest_main.cc  test_xplugin.cc
ddk/package/host/source_code/xstream/test/: CMakeLists.txt  config_test.cc  cpp_api_test.cc  method_cb.cc  method_factory.cc  method_init_test.cc  multisource_test.cc  node_test.cc  subworkflow_test.cc  thread_manager_test.cc  thread_model.cc  thread_order.cc  thread_priority_test.cc  thread_safe.cc  xstream_test.cc  xthread_pool_test.cc  xthread_test.cc
ddk/samples/ai_benchmark/code/: CMakeLists.txt  README.md  build_ptq_xj3.sh
ddk/samples/ai_benchmark/code/include/base/: common_def.h  perception_common.h
ddk/samples/ai_benchmark/code/include/input/: data_iterator.h  image_list_data_iterator.h  input_data.h  preprocessed_image_iterator.h
ddk/samples/ai_benchmark/code/include/method/: exptable.h  infer_method.h  method_data.h  method_factory.h  ptq_centernet_post_process_method.h  ptq_classfication_post_process_method.h  ptq_efficientdet_post_process_method.h  ptq_fcos_post_process_method.h  ptq_ssd_post_process_method.h  ptq_unet_post_process_method.h  ptq_yolo2_post_process_method.h  ptq_yolo3_darknet_post_process_method.h  ptq_yolo3_varg_darknet_post_process_method.h  ptq_yolo5_post_process_method.h  qat_classfication_post_process_method.h  qat_retinanet_post_process_method.h  qat_unet_post_process_method.h  qat_yolo3_post_process_method.h
ddk/samples/ai_benchmark/code/include/output/: image_list_output.h  output.h  raw_output.h
ddk/samples/ai_benchmark/code/include/plugin/: base_plugin.h  input_plugin.h  output_plugin.h  workflow_plugin.h
ddk/samples/ai_benchmark/code/include/utils/: image_cache.h  image_utils.h  tensor_utils.h  utils.h
ddk/samples/ai_benchmark/code/src/: simple_example.cc
ddk/samples/ai_benchmark/code/src/input/: data_iterator.cc  image_list_data_iterator.cc  preprocessed_image_iterator.cc
ddk/samples/ai_benchmark/code/src/method/: exptable.cc  infer_method.cc  method_factory.cc  ptq_centernet_post_process_method.cc  ptq_classfication_post_process_method.cc  ptq_efficientdet_post_process_method.cc  ptq_fcos_post_process_method.cc  ptq_ssd_post_process_method.cc  ptq_unet_post_process_method.cc  ptq_yolo2_post_process_method.cc  ptq_yolo3_darknet_post_process_method.cc  ptq_yolo3_varg_darknet_post_process_method.cc  ptq_yolo5_post_process_method.cc  qat_classfication_post_process_method.cc  qat_retinanet_post_process_method.cc  qat_unet_post_process_method.cc  qat_yolo3_post_process_method.cc
ddk/samples/ai_benchmark/code/src/output/: image_list_output.cc  output.cc  raw_output.cc
ddk/samples/ai_benchmark/code/src/plugin/: base_plugin.cc  input_plugin.cc  output_plugin.cc  workflow_plugin.cc
ddk/samples/ai_benchmark/code/src/utils/: image_cache.cc  image_utils.cc  tensor_utils.cc  utils.cc
ddk/samples/ai_express/uvc_server/01_transfer_nv12/: CMakeLists.txt  build.sh
ddk/samples/ai_express/uvc_server/01_transfer_nv12/data/: 1080p.nv12
ddk/samples/ai_express/uvc_server/01_transfer_nv12/src/: transfer_nv12.cc
ddk/samples/ai_toolchain/horizon_runtime_sample/code/: CMakeLists.txt  build_xj3.sh
ddk/samples/ai_toolchain/horizon_runtime_sample/code/00_quick_start/: CMakeLists.txt
ddk/samples/ai_toolchain/horizon_runtime_sample/code/01_api_tutorial/: CMakeLists.txt
ddk/samples/ai_toolchain/horizon_runtime_sample/code/02_advanced_samples/: CMakeLists.txt
ddk/samples/ai_toolchain/horizon_runtime_sample/code/03_misc/: CMakeLists.txt
ddk/samples/solution_zoo/solution_zoo/solution_example/yolov3_mobilenetv2_example/: CMakeLists.txt  build_and_deploy.sh  main.cc  method_factory.cc  run_example.sh
ddk/samples/solution_zoo/solution_zoo/usb_camera_solution/: CMakeLists.txt  build_and_deploy.sh  run_body.sh  run_tv_uvc.sh
ddk/samples/solution_zoo/solution_zoo/usb_camera_solution/configs/: body_detection.json  body_solution.json  box_filter_config_1M.json  dance_detection_multitask_960x544.json  dance_solution_multitask_960x544.json  display_config.json  gesture_voting.json  infer_age_gender.json  infer_gesture_det.json  infer_hand_lmk.json  infer_lmk_106pts.json  infer_multitask_config_1M.json  infer_multitask_config_8M.json  (+10 more)
(+2989 files in other folders)
